notification done + file lng

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sayit",
+  "name": "sayitlikehuman",
   "version": "0.1.1",
   "description": "Gladys say all sentense more like humans",
   "main": "index.js",
